--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -18,9 +18,8 @@ const { title, body, colSpan, rowSpan, href, colorText, padding=6, gap=0 } = Ast
 ---
 
 <ShadcnCard
-  className={`gap-${gap} card-animate transfor-y-[-40%] align-start perspective-1200 group relative col-span-1 h-auto w-full flex-none transform justify-start overflow-hidden p-${padding} shadow-lg transition duration-75 ease-in-out ${
-    colSpan || 'md:col-span-2'
-  } ${rowSpan || ''} ${href ? 'cursor-pointer hover:border-primary' : ''}`}
+  className={`gap-${gap} card-animate transform-y-[-40%] align-start perspective-1200 group relative col-span-1 h-auto flex-none transform justify-start overflow-hidden p-${padding} shadow-lg transition duration-75 ease-in-out ${colSpan} 
+  ${rowSpan} ${href ? 'cursor-pointer hover:border-primary' : ''}`}
 >
   {
     href ? (
