--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import { Terminal } from '../components/ui/terminal'
   >
   </div> -->
   <main
-    class="relative m-auto grid w-full max-w-6xl gap-2 p-2 sm:gap-2 sm:p-4 md:grid-cols-2 md:gap-3 md:p-6 lg:grid-cols-4 lg:gap-4"
+    class="relative m-auto grid w-full max-w-6xl gap-2 p-4 md:p-8 sm:gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-4 lg:gap-4"
   >
     <Card colSpan="md:col-span-4" rowSpan="md:row-span-1" padding={0} gap={4}>
       <!-- <TerminalIcon className='my-4 mx-2'/> -->
