--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -2,21 +2,22 @@
 import { cn } from '../lib/utils'
 
 type Props = {
-  size: 'sm' | 'md' | 'lg' | 'xl' | '2xl'
+  size?: 'sm' | 'md' | 'lg' | 'xl' | '2xl',
+  styling?: string
 }
 
-const { size } = Astro.props
+const { size="md", styling } = Astro.props
 ---
 
 <div
-  class={cn(
+  class={`${styling} ${cn(
     'w-full h-full mx-auto px-5',
     size === 'sm' && 'max-w-screen-sm',
     size === 'md' && 'max-w-screen-md',
     size === 'lg' && 'max-w-screen-lg',
     size === 'xl' && 'max-w-screen-xl',
     size === '2xl' && 'max-w-screen-2xl',
-  )}
+  )}`}
 >
   <slot />
 </div>
