--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,18 @@
-<footer class="border-t py-6 md:px-8 md:py-0">
-  <div
-    class="container flex flex-col items-center justify-between gap-4 md:h-24 md:flex-row"
+<footer
+  class="m-0 flex flex-col items-center justify-between gap-4 border-t py-6 md:h-24 md:flex-row md:px-8 md:py-0"
+>
+  <p
+    class="text-muted-foreground text-center text-sm leading-loose md:text-left"
   >
-    <p
-      class="text-center text-sm leading-loose text-muted-foreground md:text-left"
+    Built by{' '}
+    <a
+      href="https://github.com/harisraharjo"
+      target="_blank"
+      rel="noreferrer"
+      class="font-medium underline underline-offset-4"
     >
-      Built by{' '}
-      <a
-        href="https://github.com/harisraharjo"
-        target="_blank"
-        rel="noreferrer"
-        class="font-medium underline underline-offset-4"
-      >
-        Haris Raharjo
-      </a>
-      . with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS. 
-    </p>
-  </div>
+      Haris Raharjo
+    </a>
+    . with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS.
+  </p>
 </footer>
