--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,9 @@ const { title, description, ogImage } = Astro.props
     <HeadSEO title={title} description={description} ogImage={ogImage} />
     <ViewTransitions />
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
+  <body
+    class="min-h-screen dark:bg-gradient-to-br to-zinc-950 via-rose-950 from-black font-sans antialiased"
+  >
     <div class="flex flex-col items-center justify-center">
       <Header />
       <slot />
