--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,14 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
-import IntroCard from '../components/sections/IntroCard.astro'
-import AboutMe from '../components/sections/AboutMe.astro'
+import Tech from '../components/sections/Tech.astro'
 import Card from '../components/Card.astro'
-// import TimeZoneCard from '../components/sections/TimeZoneCard.astro'
-// import CVCard from '../components/sections/CVCard.astro'
 import ExperienceCard from '../components/sections/ExperienceCard.astro'
 import { Terminal } from '../components/ui/terminal'
-// import { Terminal as TerminalIcon } from 'lucide-react'
+import { SquareArrowOutUpRight } from 'lucide-react'
 //
 ---
 
-<script>
+<!-- <script>
   import { stagger, spring, timeline, type TimelineDefinition } from 'motion'
   import { loaderAnimation } from '../lib/constants'
 
@@ -32,8 +29,7 @@ import { Terminal } from '../components/ui/terminal'
   ]
 
   timeline(sequence as TimelineDefinition)
-</script>
-
+</script> -->
 <BaseLayout
   title="Haris Raharjo - Software Engineer"
   description="Portfolio, Projects, CV, About Me, Contact"
@@ -44,7 +40,7 @@ import { Terminal } from '../components/ui/terminal'
   >
   </div> -->
   <main
-    class="relative m-auto grid w-full max-w-6xl gap-2 p-4 md:p-8 sm:gap-2 md:grid-cols-2 md:gap-3 lg:grid-cols-4 lg:gap-4"
+    class="relative m-auto grid w-full max-w-6xl gap-2 p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-8 lg:grid-cols-4 lg:gap-4"
   >
     <Card colSpan="md:col-span-4" rowSpan="md:row-span-1" padding={0} gap={4}>
       <!-- <TerminalIcon className='my-4 mx-2'/> -->
@@ -53,37 +49,54 @@ import { Terminal } from '../components/ui/terminal'
         >
         <Terminal client:load />
       </div> -->
-      <Terminal client:load />
+      <Terminal slot="content" client:load />
       <!-- <IntroCard /> -->
     </Card>
     <Card colSpan="md:col-span-3" rowSpan="md:row-span-1" title="Experience">
-      <ExperienceCard />
+      <a
+        href="/experience"
+        rel="noreferrer"
+        class="hover:border-primary cursor-pointer"
+        slot="header"
+      >
+        <SquareArrowOutUpRight
+          className="hover:text-accent position absolute right-6"
+          size={20}
+        />
+      </a>
+      <ExperienceCard slot="content" />
     </Card>
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1" title="Technologies">
-      <AboutMe />
+      <a
+        slot="header"
+        href="/tech"
+        rel="noreferrer"
+        class="hover:border-primary cursor-pointer"
+      >
+        <SquareArrowOutUpRight
+          className="hover:text-accent position absolute right-6"
+          size={20}
+        />
+      </a>
+      <Tech slot="content" />
     </Card>
-    <!-- <Card colSpan="md:col-span-1" rowSpan="md:row-span-1" title="Resume">
-      <CVCard />
-    </Card> -->
     <Card
       colSpan="md:col-span-4"
       rowSpan="md:row-span-1"
       title="Projects"
       href="/projects"
-    />
-    <!-- <Card colSpan="lg:col-span-2" rowSpan="md:row-span-2" title="Favourite resources">
-      <TimeZoneCard />
-    </Card> -->
-    <!-- <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
-      <ContactsCard />
-    </Card> -->
-    <!-- <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
-      <div class="flex h-full flex-col justify-between">
-        <blockquote class="mt-6 border-l-2 pl-6 italic">
-          “Anything one man can imagine, other men can make real.”
-        </blockquote>
-        <p class="mt-2 text-xs">- Jules Verne</p>
-      </div>
-    </Card> -->
+    >
+      <a
+        slot="header"
+        href="/projects"
+        rel="noreferrer"
+        class="hover:border-primary cursor-pointer"
+      >
+        <SquareArrowOutUpRight
+          className="hover:text-accent position absolute right-6"
+          size={20}
+        />
+      </a>
+    </Card>
   </main>
 </BaseLayout>
