--- a/src/pages/tech/[...category].astro
+++ b/src/pages/tech/[...category].astro
@@ -4,15 +4,21 @@ import { undefined } from 'astro:schema'
 import BaseLayout from '../../layouts/BaseLayout.astro'
 import Tab from '../../components/sections/tech/Tab.astro'
 import Card from '../../components/Card.astro'
+import { Image } from 'astro:assets'
+import { ImageMetadata } from 'astro'
 
-type Category =
-  | 'all'
-  | 'web'
-  | 'lang'
-  | 'cross'
-  | 'database'
-  | 'others'
-  | 'cloud'
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  '/src/images/*.{webp,jpeg,jpg,png,gif}'
+)
+
+// type Category =
+//   | 'all'
+//   | 'web'
+//   | 'lang'
+//   | 'cross'
+//   | 'database'
+//   | 'others'
+//   | 'cloud'
 // : {params: {category: Category}}[]
 
 export function getStaticPaths() {
@@ -50,11 +56,11 @@ const techs = {
     icon: '💻',
     path: 'lang',
     skills: [
-      { name: 'Python' },
-      { name: 'Rust' },
-      { name: 'JavaScript' },
-      { name: 'TypeScript' },
-      { name: 'PHP' },
+      { name: 'Python', icon: 'py.webp' },
+      { name: 'Rust', icon: 'rust.webp' },
+      { name: 'JavaScript', icon: 'js.webp' },
+      { name: 'TypeScript', icon: 'ts.webp' },
+      { name: 'PHP', icon: 'php.png' },
     ],
   },
   web: {
@@ -123,48 +129,62 @@ const techs = {
         ))
       }
     </div>
-    
+
     <section class="grid gap-6 md:grid-cols-3">
-    {
-      category === undefined && (
-        <>
-          {Object.entries(techs).map(([key, section]) => (
-            <div class="rounded-xl bg-white p-6 shadow-lg dark:bg-gray-800">
-              {/* Head */}
-              <div class="mb-6 flex items-center">
-                <span class="mr-3 text-3xl">{section.icon}</span>
-                <h4 class="text-xl font-bold text-gray-800 dark:text-white">
-                  {section.title}
-                </h4>
-              </div>
-              <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
-                {section.skills.map((skill, index) => (
-                  <div class="flex items-center justify-between rounded-lg bg-gray-50 p-3 dark:bg-gray-700">
-                    <span class="font-medium text-gray-800 dark:text-white">
-                      {skill.name}
-                    </span>
-                  </div>
-                ))}
-              </div>
-            </div>
-          ))}
-        </>
-      )
-    }
-    {
-      category !== undefined && techs[category.toString()]?.skills.map((skill) => (
-        <>
-          <Card colSpan="md:col-span-0" rowSpan="md:row-span-0">
-            {skill.name}
-          </Card>
-          {/* <div class="rounded-lg bg-white p-6 shadow-md dark:bg-gray-800">
-              <div class="mb-3 flex items-center justify-between">
+      {
+        category === undefined && (
+          <>
+            {Object.entries(techs).map(([key, section]) => (
+              <Card>
+                {/* Head */}
+                <div class="mb-6 flex items-center" slot="header">
+                  <span class="mr-3 text-3xl">{section.icon}</span>
+                  <h4 class="text-xl font-bold text-gray-800 dark:text-white">
+                    {section.title}
+                  </h4>
+                </div>
+                <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3" slot="footer">
+                  {section.skills.map((skill, index) => (
+                    <div class="flex items-center justify-between rounded-lg bg-gray-50 p-3 dark:bg-gray-700">
+                      <span class="font-medium text-gray-800 dark:text-white">
+                        {skill.name}
+                      </span>
+                    </div>
+                  ))}
+                </div>
+              </Card>
+            ))}
+          </>
+        )
+      }
+      {
+        category !== undefined &&
+          techs[category.toString()]?.skills.map((skill) => (
+            <>
+              {skill.icon && (
+                <Card padding={0}>
+                  {/* <TsLogo /> */}
+                  <Image
+                    slot={'content'}
+                    src={images[`/src/images/${skill.icon}`]()}
+                    alt={'Icon'}
+                    width={200}
+                    height={200}
+                    loading="lazy"
+                    decoding="async"
+                  />
+
+                  {/* {skill.name} */}
+                </Card>
+              )}
+              {/* <div class="rounded-lg bg-white p-6 shadow-md dark:bg-gray-500">
+              <div class="mb-3 flex items-center justify-between">500
                 <h3 class="text-lg font-semibold">{skill.name}</h3>
               </div>
             </div> */}
-        </>
-      ))
-    }
+            </>
+          ))
+      }
     </section>
   </main>
 </BaseLayout>
