--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@ import Card from '../components/Card.astro'
 import ExperienceCard from '../components/sections/ExperienceCard.astro'
 import { Terminal } from '../components/ui/terminal'
 import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
-import Carousel from '../components/sections/Carousel.astro'
 //
 ---
 
@@ -68,7 +67,7 @@ import Carousel from '../components/sections/Carousel.astro'
       <!-- <ArrowLeftCircle className='absolute top-1/2 left-0 z-10 flex h-10 w-10 -translate-x-2 -translate-y-1/2 transform items-center justify-center rounded-full bg-red-950/80 text-white transition-all hover:bg-red-900/80'/> -->
       
       
-      <Carousel slot="content" />
+      <Tech slot="content" />
       <!-- <Tech slot="content" /> -->
     </Card>
     <Card colSpan="md:col-span-3" rowSpan="md:row-span-4" title="/experience">
