--- a/src/components/ui/carousel/index.astro
+++ b/src/components/ui/carousel/index.astro
@@ -2,9 +2,7 @@
 import Nav from './nav.astro'
 
 interface Props {
-  data: {
-    id: string 
-  }[]
+  data: string[]
 }
 
 const { data } = Astro.props
