--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
 import Tech from '../components/sections/Tech.astro'
+import ProjectCard from '../components/sections/ProjectCard.astro'
 import Card from '../components/Card.astro'
 import ExperienceCard from '../components/sections/ExperienceCard.astro'
 import { Terminal } from '../components/ui/terminal'
-import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
+// import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
 //
 ---
 
@@ -42,11 +43,16 @@ import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
   <main
     class="relative m-auto grid w-full max-w-6xl gap-2 p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-8 lg:grid-cols-4 lg:gap-4"
   >
-    <Card colSpan="md:col-span-2" rowSpan="md:row-span-1" padding={0} gap={4}>
+    <Card colSpan="md:col-span-3" rowSpan="md:row-span-1" padding={0} gap={4}>
       <Terminal slot="content" client:load />
       <!-- <IntroCard /> -->
     </Card>
-    <Card colSpan="md:col-span-2" rowSpan="md:row-span-1" >
+    <Card
+      colSpan="md:col-span-1"
+      rowSpan="md:row-span-1"
+      padding={0}
+      styling="pt-4"
+    >
       <!-- <div class="flex gap-4 overflow-x-auto pt-0" slot="header">
         <a
           href="#frontend"
@@ -65,12 +71,10 @@ import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
         >
       </div> -->
       <!-- <ArrowLeftCircle className='absolute top-1/2 left-0 z-10 flex h-10 w-10 -translate-x-2 -translate-y-1/2 transform items-center justify-center rounded-full bg-red-950/80 text-white transition-all hover:bg-red-900/80'/> -->
-      
-      
+
       <Tech slot="content" />
-      <!-- <Tech slot="content" /> -->
     </Card>
-    <Card colSpan="md:col-span-3" rowSpan="md:row-span-4" title="/experience">
+    <Card colSpan="md:col-span-2" rowSpan="md:row-span-4" title="/experience">
       <!-- {title && <h2 class="m-0 text-xl font-bold">{title}</h2>} -->
       <!-- <a
         href="/experience"
@@ -87,12 +91,13 @@ import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
     </Card>
 
     <Card
-      colSpan="md:col-span-"
+      colSpan="md:col-span-2"
       rowSpan="md:row-span-1"
       title="Projects"
       href="/projects"
     >
-      <a
+      <ProjectCard heading="My head" slot="content" />
+      <!-- <a
         slot="header"
         href="/projects"
         rel="noreferrer"
@@ -102,7 +107,7 @@ import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
           className="hover:text-accent position absolute right-6"
           size={20}
         />
-      </a>
+      </a> -->
     </Card>
   </main>
 </BaseLayout>
